chart/templates/site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
spec:
  selector:
    app: site
  ports:
    - port: 8080
      targetPort: 8080
