chart/templates/site/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: site-nginx
spec:
  podSelector:
    matchLabels:
      app: site
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cloudflared
      ports:
        - port: 8080
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared
spec:
  podSelector:
    matchLabels:
      app: cloudflared
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - ports:
        - port: 53
          protocol: UDP
    - ports:
        - port: 443
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app: site
      ports:
        - port: 8080
